# GrabCut

./: .gitignore  AdaptedGraph.cpp  AdaptedGraph.h  CMakeLists.txt  GCApplication.cpp  GCApplication.h  GMM.cpp  GMM.h  README.md  block.h  grabcut.cpp  grabcut.h  graph.cpp  graph.h  main.cpp  maxflow.cpp
